<resources>
    <string name="app_name">MobileHealthcareAgent</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toast_button">Toast Button</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="height">Height in centimeter</string>
    <string name="weight">Weight in kilogram</string>

    <string name="action_autho">Authorization</string>
    <string name="read_step_data">Read Data Today</string>
    <string name="read_step_data_history_steps">Read Steps data History</string>
    <string name="read_step_data_history_calorie">Read Calorie data History</string>
    <string name="read_step_data_history_heartPoint">Read HeartPoint data History</string>
    <string name="title_activity_history">HistoryActivity</string>
</resources>
